--- a/documentation/index.html
+++ b/documentation/index.html
@@ -7,6 +7,23 @@
     <title>JS Documentation</title>
 </head>
 <body>
+    <nav id="navbar">
+        <h1>Js Documentation</h1>
+        <a href="#Introduction" class="nav-link">Introducton</a>
+        <a href="#What_you_should_already_know" class="nav-link">What you should already know</a>
+        <a href="#JavaScript_and_Java" class="nav-link">JavaScript and Java</a>
+        <a href="#Hello_world" class="nav-link">Hello world</a>
+        <a href="#Variables" class="nav-link">Variables</a>
+        <a href="#Declaring_variables" class="nav-link">Declaring variables</a>
+        <a href="#Variable_scope" class="nav-link">Variable scope</a>
+        <a href="#Global_variables" class="nav-link">Global variables</a>
+        <a href="#Constants" class="nav-link">Constants</a>
+        <a href="#Data_types" class="nav-link">Data types</a>
+        <a href="#if...else_statement" class="nav-link">if...else statement</a>
+        <a href="#while_statement" class="nav-link">while statement</a>
+        <a href="#Function_declarations" class="nav-link">Function declarations</a>
+        <a href="#Reference" class="nav-link">Reference</a>
+    </nav>
     <main id="main-doc">
     <section class="main-section" id="Introduction">
         <h2>Introduction</h2>
