--- a/documentation/index.html
+++ b/documentation/index.html
@@ -27,7 +27,7 @@
     </nav>
     <main id="main-doc">
     <section class="main-section" id="Introduction">
-        <h2>Introduction</h2>
+        <header>Introduction</header>
         <p>JavaScript is a cross-platform, object-oriented scripting language. It is a small and lightweight language. Inside a host environment (for example, a web browser), JavaScript can be connected to the objects of its environment to provide programmatic control over them.</p>
         <p>
             JavaScript contains a standard library of objects, such as Array, Date, and Math, and a core set of language elements such as operators, control structures, and statements. Core JavaScript can be extended for a variety of purposes by supplementing it with additional objects; for example:
@@ -38,7 +38,7 @@
         </p>
     </section>
     <section class="main-section" id="What_you_should_already_know">
-        <h2>What you should already know</h2>
+        <header>What you should already know</header>
         <p>This guide assumes you have the following basic background:
             <ul>
                 <li>A general understanding of the Internet and the World Wide Web (WWW).</li>
@@ -48,13 +48,13 @@
         </p>
     </section>
     <section class="main-section" id="JavaScript_and_Java">
-        <h2>JavaScript and Java</h2>
+        <header>JavaScript and Java</header>
         <p>JavaScript and Java are similar in some ways but fundamentally different in some others. The JavaScript language resembles Java but does not have Java's static typing and strong type checking. JavaScript follows most Java expression syntax, naming conventions and basic control-flow constructs which was the reason why it was renamed from LiveScript to JavaScript.</p>
         <p>In contrast to Java's compile-time system of classes built by declarations, JavaScript supports a runtime system based on a small number of data types representing numeric, Boolean, and string values. JavaScript has a prototype-based object model instead of the more common class-based object model. The prototype-based model provides dynamic inheritance; that is, what is inherited can vary for individual objects. JavaScript also supports functions without any special declarative requirements. Functions can be properties of objects, executing as loosely typed methods.</p>
         <p>JavaScript is a very free-form language compared to Java. You do not have to declare all variables, classes, and methods. You do not have to be concerned with whether methods are public, private, or protected, and you do not have to implement interfaces. Variables, parameters, and function return types are not explicitly typed.</p>
     </section>
     <section class="main-section" id="Hello_world">
-        <h2>Hello world</h2>
+        <header>Hello world</header>
         <p>To get started with writing JavaScript, open the Scratchpad and write your first "Hello world" Javascript code:</p>
             <code>
                 function greetMe(yourName) { alert("Hello " + yourName); } greetMe("World");
@@ -63,13 +63,13 @@
         </p>
     </section>
     <section class="main-section" id="Variables">
-        <h2>Variables</h2>
+        <header>Variables</header>
         <p>You use variables as symbolic names for values in your application. The names of variables, called identifiers, conform to certain rules.</p>
         <p>A JavaScript identifier must start with a letter, underscore (_), or dollar sign ($); subsequent characters can also be digits (0-9). Because JavaScript is case sensitive, letters include the characters "A" through "Z" (uppercase) and the characters "a" through "z" (lowercase).</p>
         <p>You can use ISO 8859-1 or Unicode letters such as å and ü in identifiers. You can also use the Unicode escape sequences as characters in identifiers. Some examples of legal names are Number_hits, temp99, and _name.</p>
     </section>
     <section class="main-section" id="Declaring_variables">
-        <h2>Declaring variables</h2>
+        <header>Declaring variables</header>
         <p>You can declare a variable in three ways:</p>
         <p>With the keyword var. For example,</p>
         <code>var x = 42.</code>
@@ -83,7 +83,7 @@
         <p>This syntax can be used to declare a block scope local variable. See Variable scope below.</p>
     </section>
     <section class="main-section" id="Variable_scope">
-        <h2>Variable scope</h2>
+        <header>Variable scope</header>
         <p>When you declare a variable outside of any function, it is called a global variable, because it is available to any other code in the current document. When you declare a variable within a function, it is called a local variable, because it is available only within that function.</p>
         <p>JavaScript before ECMAScript 2015 does not have block statement scope; rather, a variable declared within a block is local to the function (or global scope) that the block resides within. For example the following code will log 5, because the scope of x is the function (or global context) within which x is declared, not the block, which in this case is an if statement.</p>
         <code>if (true) { var x = 5; } console.log(x); // 5</code>
@@ -91,12 +91,12 @@
         <code>if (true) { let y = 5; } console.log(y); // ReferenceError: y is not defined</code>
     </section>
     <section class="main-section" id="Global_variables">
-        <h2>Global variables</h2>
+        <header>Global variables</header>
         <p>Global variables are in fact properties of the global object. In web pages the global object is window, so you can set and access global variables using the window.variable syntax.</p>
         <p>Consequently, you can access global variables declared in one window or frame from another window or frame by specifying the window or frame name. For example, if a variable called phoneNumber is declared in a document, you can refer to this variable from an iframe as parent.phoneNumber.</p>
     </section>
     <section class="main-section" id="Constants">
-        <h2>Constants</h2>
+        <header>Constants</header>
         <p>You can create a read-only, named constant with the const keyword. The syntax of a constant identifier is the same as for a variable identifier: it must start with a letter, underscore or dollar sign and can contain alphabetic, numeric, or underscore characters.</p>
         <code>const PI = 3.14;</code>
         <p>A constant cannot change value through assignment or be re-declared while the script is running. It has to be initialized to a value.</p>
@@ -107,7 +107,7 @@
             <code>const MY_OBJECT = {"key": "value"}; MY_OBJECT.key = "otherValue";</code>
     </section>
     <section class="main-section" id="Data_types">
-        <h2>Data types</h2>
+        <header>Data types</header>
         <p>The latest ECMAScript standard defines seven data types:
             <ul>
                 <li>Six data types that are primitives:
@@ -140,7 +140,7 @@
         <code>if ((x = y)) { /* statements here */ }</code>
     </section>
     <section class="main-section" id="while_statement">
-        <h2>while statement</h2>
+        <header>while statement</header>
         <p>A while statement executes its statements as long as a specified condition evaluates to true. A while statement looks as follows:</p>
         <code>while (condition) statement</code>
         <p>If the condition becomes false, statement within the loop stops executing and control passes to the statement following the loop.</p>
@@ -159,7 +159,7 @@
         <p>After completing the third pass, the condition n < 3 is no longer true, so the loop terminates.</p>
     </section>
     <section class="main-section" id="Function_declarations">
-        <h2>Function declarations</h2>
+        <header>Function declarations</header>
         <p>A function definition (also called a function declaration, or function statement) consists of the function keyword, followed by:
             <ul>
                 <li>The name of the function.</li>
@@ -174,7 +174,7 @@
         <p>Primitive parameters (such as a number) are passed to functions by value; the value is passed to the function, but if the function changes the value of the parameter, this change is not reflected globally or in the calling function.</p>
     </section>
     <section class="main-section" id="Reference">
-        <h2>Reference</h2>
+        <header>Reference</header>
         <p>
             <ul>
                 <li>All the documentation in this page is taken from <a href="">MDN</a></li>
