refactor: update header in navbar

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav id="navbar">
-        <h1>Js Documentation</h1>
+        <header>Js Documentation</header>
         <a href="#Introduction" class="nav-link">Introducton</a>
         <a href="#What_you_should_already_know" class="nav-link">What you should already know</a>
         <a href="#JavaScript_and_Java" class="nav-link">JavaScript and Java</a>
