--- a/documentation/index.html
+++ b/documentation/index.html
@@ -11,7 +11,7 @@
     <nav id="navbar">
         <header>JS Documentation</header>
         <ul>
-        <li><a href="#Introduction" class="nav-link">Introducton</a></li>
+        <li><a href="#Introduction" class="nav-link">Introduction</a></li>
         <li><a href="#What_you_should_already_know" class="nav-link">What you should already know</a></li>
         <li><a href="#JavaScript_and_Java" class="nav-link">JavaScript and Java</a></li>
         <li><a href="#Hello_world" class="nav-link">Hello world</a></li>
@@ -58,9 +58,8 @@
     <section class="main-section" id="Hello_world">
         <header>Hello world</header>
         <p>To get started with writing JavaScript, open the Scratchpad and write your first "Hello world" Javascript code:</p>
-            <code>
-                function greetMe(yourName) { alert("Hello " + yourName); } greetMe("World");
-            </code>
+            <code>function greetMe(yourName) { alert("Hello " + yourName); } 
+                greetMe("World");</code>
             <p>Select the code in the pad and hit Ctrl+R to watch it unfold in your browser!
         </p>
     </section>
