--- a/documentation/index.html
+++ b/documentation/index.html
@@ -127,7 +127,7 @@
         <p>Although these data types are a relatively small amount, they enable you to perform useful functions with your applications. Objects and functions are the other fundamental elements in the language. You can think of objects as named containers for values, and functions as procedures that your application can perform.</p>
     </section>
     <section class="main-section" id="if...else_statement">
-        <h1>if...else statement</h1>
+        <header>if...else statement</header>
         <p>Use the if statement to execute a statement if a logical condition is true. Use the optional else clause to execute a statement if the condition is false. An if statement looks as follows:</p>
         <code>if (condition) { statement_1; } else { statement_2; }</code>
         <p>condition can be any expression that evaluates to true or false. See Boolean for an explanation of what evaluates to true and false. If condition evaluates to true, statement_1 is executed; otherwise, statement_2 is executed. statement_1 and statement_2 can be any statement, including further nested if statements.</p>
