--- a/documentation/index.html
+++ b/documentation/index.html
@@ -178,7 +178,7 @@
         <header>Reference</header>
         <p>
             <ul>
-                <li>All the documentation in this page is taken from <a href="">MDN</a></li>
+                <li>All the documentation in this page is taken from <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide" target="_blank">MDN</a></li>
             </ul>
         </p>
     </section>
