add html contents

--- a/product-landing-page/index.html
+++ b/product-landing-page/index.html
@@ -8,6 +8,83 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    
+    <header>
+        <div><img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png" alt="original trombones logo"></div>
+        <nav>
+            <ul>
+                <li>Features</li>
+                <li>How It Works</li>
+                <li>Pricing</li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="hero">
+            <h2>Handcrafted, home-made masterpieces</h2>
+            <form action="">
+                <input type="text" name="email" id="email" placeholder="Enter your email address">
+                <button type="submit">GET STARTED</button>
+            </form>
+        </section>
+        <section id="features">
+            <ul>
+                <li>
+                    <img src="" alt="">
+                    <h2>Premium Materials</h2>
+                    <p>Our trombones use the shiniest brass which is sourced locally. This will increase the logevity of your purchase</p>
+                </li>
+                <li>
+                    <img src="" alt="">
+                    <h2>Fast Shipping</h2>
+                    <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if your are not satisfied.</p>
+                </li>
+                <li>
+                    <img src="" alt="">
+                    <h2>Quality Assurance</h2>
+                    <p>For every purchase you make, we  will ensure there are no damages or faults and we will check adn test the pitch of your instrument.</p>
+                </li>
+            </ul>
+        </section>
+        <section id="how_it_works">
+            <video src=""></video>
+        </section>
+        <section id="products">
+            <div class="item-1">
+                <h2>TENOR TROMBONE</h2>
+                <p class="price">$600</p>
+                <p>Lorem ipsum.</p>
+                <p>Lorem ipsum.</p>
+                <p>Lorem ipsum dolor.</p>
+                <p>Lorem ipsum.</p>
+                <button>SELECT</button>
+            </div>
+            <div class="item-2">
+                <h2>BASS TROMBONE</h2>
+                <p class="price">$900</p>
+                <p>Lorem ipsum.</p>
+                <p>Lorem ipsum.</p>
+                <p>Lorem ipsum dolor.</p>
+                <p>Lorem ipsum.</p>
+                <button>SELECT</button>
+            </div>
+            <div class="item-3">
+                <h2>VALVE TROMBONE</h2>
+                <p class="price">$1200</p>
+                <p>Plays similar to a Trumpet</p>
+                <p>Great for Jazz Bands</p>
+                <p>Lorem ipsum dolor.</p>
+                <p>Lorem ipsum.</p>
+                <button>SELECT</button>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <ul>
+            <li>Privacy</li>
+            <li>Terms</li>
+            <li>Contact</li>
+        </ul>
+        <p class="copy">Copyright 2016, Original Trombones</p>
+    </footer>
 </body>
 </html>
