--- a/product-landing-page/index.html
+++ b/product-landing-page/index.html
@@ -11,22 +11,20 @@
     crossorigin="anonymous">
 </head>
 <body>
-    <header>
-        <div id="logo"><img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png" alt="original trombones logo"></div>
-        <nav id="navbar">
-            <ul>
-                <li class="nav-items"><a href="">Features</a></li>
-                <li class="nav-items"><a href="">How It Works</a></li>
-                <li class="nav-items"><a href="">Pricing</a></li>
-            </ul>
+    <header id="header">
+        <div id="logo"><img id="header-img" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png" alt="original trombones logo"></div>
+        <nav id="nav-bar">           
+            <a class="nav-link" href="#features">Features</a>
+            <a class="nav-link" href="#how_it_works">How It Works</a>
+            <a class="nav-link" href="#products">Pricing</a>           
         </nav>
     </header>
     <main>
         <section id="hero">
             <h2>Handcrafted, home-made masterpieces</h2>
-            <form action="">
-                <input type="text" name="email" id="email" placeholder="Enter your email address">
-                <button type="submit">GET STARTED</button>
+            <form action="https://www.freecodecamp.com/email-submit" id="form">
+                <input type="email" name="email" id="email" placeholder="Enter your email address">
+                <input type="submit" id="submit" value="GET STARTED">
             </form>
         </section>
         <section id="features">
@@ -55,7 +53,7 @@
             </ul>
         </section>
         <section id="how_it_works">
-            <iframe src="https://www.youtube.com/watch?v=y8Yv4pnO7qc"></iframe>
+            <iframe id="video" src="https://www.youtube.com/embed/y8Yv4pnO7qc"></iframe>
         </section>
         <section id="products">
             <div class="item">
@@ -93,7 +91,7 @@
             <li>Terms</li>
             <li>Contact</li>
         </ul>
-        <p class="copy">Copyright 2016, Original Trombones</p>
+        <p class="copy">Copyright 2023, Original Trombones</p>
     </footer>
 </body>
 </html>
