--- a/personal-portfolio/index.html
+++ b/personal-portfolio/index.html
@@ -5,8 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pramod Singh</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <nav id="navbar">
+        <a href="#welcome-section">About</a>
+        <a href="#projects">Work</a>
+        <a href="#contact">Contact</a>
+    </nav>
+    <main>
+        <section id="welcome-section">
+            <h1>Hey I am Pramod</h1>
+            <p>a front end web developer</p>
+        </section>
+        <section id="projects">
+            <h2>These are some of my projects</h2>
+            <div class="container">
+            <div class="project-title">Tribute Page</div>
+            <div class="project-title">JS Documentation</div>
+            <div class="project-title">Product Page</div>
+            <div class="project-title">Personal Portfolio</div>
+        </div>
+        </section>
+        <section id="contact">
+            <h2>Let's work together</h2>
+            <p>How do you take your coffee?</p>
+            <div class="social-media-links">
+                <a href="">Facebook</a>
+                <a href="">GitHub</a>
+                <a href="">Twitter</a>
+                <a href="">Send a mail</a>
+                <a href="">Call me</a>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <p>@ Created by <a href="pramodsingh.com" target="_blank">Pramod Kumar Singh</a></p>
+    </footer>
 </body>
 </html>
