--- a/personal-portfolio/index.html
+++ b/personal-portfolio/index.html
@@ -1,46 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pramod Singh</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+    />
+  </head>
+  <body>
     <nav id="navbar">
-        <a href="#welcome-section">About</a>
-        <a href="#projects">Work</a>
-        <a href="#contact">Contact</a>
+      <a href="#welcome-section">About</a>
+      <a href="#projects">Work</a>
+      <a href="#contact">Contact</a>
     </nav>
     <main>
-        <section id="welcome-section">
-            <h1>Hey I am Pramod</h1>
-            <p>a front end web developer</p>
-        </section>
-        <section id="projects">
-            <h2>These are some of my projects</h2>
-            <div class="container">
-            <div class="project-title">Tribute Page</div>
-            <div class="project-title">JS Documentation</div>
-            <div class="project-title">Product Page</div>
-            <div class="project-title">Personal Portfolio</div>
-        </div>
-        </section>
-        <section id="contact">
-            <h2>Let's work together</h2>
-            <p>How do you take your coffee?</p>
-            <div class="social-media-links">
-                <a href="">Facebook</a>
-                <a href="">GitHub</a>
-                <a href="">Twitter</a>
-                <a href="">Send a mail</a>
-                <a href="">Call me</a>
+      <section id="welcome-section">
+        <h1 id="main-heading">Hey I am Pramod</h1>
+        <p id="sub-heading">a front end web developer</p>
+      </section>
+      <section id="projects">
+        <h2>These are some of my projects</h2>
+        <hr />
+        <div class="container">
+          <div class="project-tile">
+            <div class="project-image"></div>
+            <div class="project-title">
+              <span>< </span>Tribute Page<span> /></span>
             </div>
-        </section>
+          </div>
+          <div class="project-tile">
+            <div class="project-image"></div>
+            <div class="project-title">
+              <span>< </span>JS Documentation<span> /></span>
+            </div>
+          </div>
+          <div class="project-tile">
+            <div class="project-image"></div>
+            <div class="project-title">
+              <span>< </span>Product Page<span> /></span>
+            </div>
+          </div>
+          <div class="project-tile">
+            <div class="project-image"></div>
+            <div class="project-title">
+              <span>< </span>Personal Portfolio<span> /></span>
+            </div>
+          </div>
+        </div>
+        <div id="profile-link">Show all <span>></span></div>
+      </section>
+      <section id="contact">
+        <h2>Let's work together...</h2>
+        <p>How do you take your coffee?</p>
+        <div class="social-media-links">
+          <a href="https://facebook.com" target="_blank"
+            ><i class="fa-brands fa-square-facebook"></i> Facebook</a
+          >
+          <a href="https://github.com" target="_blank"><i class="fa-brands fa-github"></i> GitHub</a>
+          <a href="https://twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i> Twitter</a>
+          <a href="#" target="_blank"><i class="fa-solid fa-at"></i> Send a mail</a>
+          <a href="#" target="_blank"><i class="fa-solid fa-mobile-screen-button"></i> Call me</a>
+        </div>
+      </section>
     </main>
     <footer>
-        <p>@ Created by <a href="pramodsingh.com" target="_blank">Pramod Kumar Singh</a></p>
+      <p>
+        @ Created by
+        <a href="pramodsingh.com" target="_blank">Pramod Kumar Singh</a>
+      </p>
     </footer>
-</body>
+  </body>
 </html>
