--- a/personal-portfolio/index.html
+++ b/personal-portfolio/index.html
@@ -26,32 +26,45 @@
         <h2>These are some of my projects</h2>
         <hr />
         <div class="container">
-          <div class="project-tile">
-            <div class="project-image"></div>
-            <div class="project-title">
-              <span>< </span>Tribute Page<span> /></span>
+          <a class="project-link" href="">
+            <div class="project-tile">
+              <div class="project-image first-project"></div>
+              <div class="project-title">
+                <span>< </span>Tribute Page<span> /></span>
+              </div>
             </div>
-          </div>
-          <div class="project-tile">
-            <div class="project-image"></div>
-            <div class="project-title">
-              <span>< </span>JS Documentation<span> /></span>
+          </a>
+          <a class="project-link"  href="https://js-documentation-pks.netlify.com" target="_blank">
+            <div class="project-tile">
+              <div class="project-image second-project"></div>
+              <div class="project-title">
+                <span>< </span>JS Documentation<span> /></span>
+              </div>
             </div>
-          </div>
-          <div class="project-tile">
-            <div class="project-image"></div>
-            <div class="project-title">
-              <span>< </span>Product Page<span> /></span>
+          </a>
+          <a class="project-link" href="https://product-page-pks.netlify.com" target="_blank">
+            <div class="project-tile">
+              <div class="project-image third-project"></div>
+              <div class="project-title">
+                <span>< </span>Product Page<span> /></span>
+              </div>
             </div>
-          </div>
-          <div class="project-tile">
-            <div class="project-image"></div>
-            <div class="project-title">
-              <span>< </span>Personal Portfolio<span> /></span>
+          </a>
+          <a class="project-link" href="">
+            <div class="project-tile">
+              <div class="project-image fourth-project"></div>
+              <div class="project-title">
+                <span>< </span>Personal Portfolio<span> /></span>
+              </div>
             </div>
-          </div>
+          </a>
         </div>
-        <div id="profile-link">Show all <span>></span></div>
+        <a
+          id="profile-link"
+          href="https://www.freecodecamp.org/pramodsinghpks"
+          target="_blank"
+          >Show all <span>></span></a
+        >
       </section>
       <section id="contact">
         <h2>Let's work together...</h2>
@@ -60,10 +73,18 @@
           <a href="https://facebook.com" target="_blank"
             ><i class="fa-brands fa-square-facebook"></i> Facebook</a
           >
-          <a href="https://github.com" target="_blank"><i class="fa-brands fa-github"></i> GitHub</a>
-          <a href="https://twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i> Twitter</a>
-          <a href="#" target="_blank"><i class="fa-solid fa-at"></i> Send a mail</a>
-          <a href="#" target="_blank"><i class="fa-solid fa-mobile-screen-button"></i> Call me</a>
+          <a href="https://github.com" target="_blank"
+            ><i class="fa-brands fa-github"></i> GitHub</a
+          >
+          <a href="https://twitter.com" target="_blank"
+            ><i class="fa-brands fa-twitter"></i> Twitter</a
+          >
+          <a href="#" target="_blank"
+            ><i class="fa-solid fa-at"></i> Send a mail</a
+          >
+          <a href="#" target="_blank"
+            ><i class="fa-solid fa-mobile-screen-button"></i> Call me</a
+          >
         </div>
       </section>
     </main>
