feat: add portfolio image and link

--- a/personal-portfolio/index.html
+++ b/personal-portfolio/index.html
@@ -50,7 +50,7 @@
               </div>
             </div>
           </a>
-          <a class="project-link" href="">
+          <a class="project-link" href="https://personal-portfolio-pks.netlify.app" target="_blank">
             <div class="project-tile">
               <div class="project-image fourth-project"></div>
               <div class="project-title">
