--- a/personal-portfolio/index.html
+++ b/personal-portfolio/index.html
@@ -26,7 +26,7 @@
         <h2>These are some of my projects</h2>
         <hr />
         <div class="container">
-          <a class="project-link" href="">
+          <a class="project-link" href="#">
             <div class="project-tile">
               <div class="project-image first-project"></div>
               <div class="project-title">
